apps/gamani/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamani
  namespace: apps
  labels:
    app: gamani
spec:
  selector:
    app: gamani
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
    name: http
  type: ClusterIP
