apps/gamani/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamani-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - gamani.vadimzak.com
    secretName: gamani-tls
  rules:
  - host: gamani.vadimzak.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gamani-service
            port:
              number: 80
